# LithoStream

./: .env.example  .gitignore  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: main.py
src/api/: image_controller.py  stl_controller.py
src/core/: config.py  exceptions.py  logging.py
src/services/: image_service.py  stl_service.py
src/templates/: index.html
src/utils/: common_utils.py
tests/: test_api.py
